# advent-of-code-2k22

./: .cqfdrc  .gitignore  CMakeLists.txt  LICENSE  build.sh
.cqfd/docker/: Dockerfile
.github/workflows/: ci-advent-of-code-2k22.yaml
dotvscode/: c_cpp_properties.json  launch.json  settings.json  tasks.json
include/day1/: day1.hpp  elf.hpp
include/day2/: const.hpp  day2.hpp  player.hpp
include/day3/: day3.hpp
include/tools/: tools.h
src/: CMakeLists.txt
src/day1/: CMakeLists.txt  day1.cpp  elf.cpp  main.cpp
src/day2/: CMakeLists.txt  day2.cpp  main.cpp  player.cpp
src/day3/: CMakeLists.txt  day3.cpp  main.cpp
src/tests/: CMakeLists.txt  day1_tests.cpp  tests.cpp
src/tools/: CMakeLists.txt  tools.cpp
